fix(css): Added the missing border radius on item labels

--- a/web/src/index.scss
+++ b/web/src/index.scss
@@ -144,6 +144,8 @@ img {
     text-transform: uppercase;
     white-space: nowrap;
     text-overflow: ellipsis;
+    border-bottom-left-radius: $borderRadius;
+    border-bottom-right-radius: $borderRadius;
   }
 
   .item-price {
@@ -239,6 +241,7 @@ input[type='number'] {
   gap: 2px;
   position: absolute;
   bottom: 2vh;
+  border-radius: $borderRadius;
 }
 
 .item-info {
